<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentGenerarCodigo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_titulo_generar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_persona_generar"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textSize="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtext_nro_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginHorizontal="20dp"/>


        <TextView
            android:id="@+id/txt_titulo_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubicacion"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_campo_obligatorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campos_obligatorios"
            android:textSize="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_provincia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/provincia"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <Spinner
            android:id="@+id/spinner_provincia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_departamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departamento"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_departamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_localidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/localidad"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_localidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_nombre_calle_ruta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre_calle_ruta"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_nombre_calle_ruta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_nro_puerta_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nro_puerta_km"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_nro_puerta_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_nro_piso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nro_piso"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_nro_piso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_departamento_pieza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/departamento_pieza"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_departamento_pieza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_edificio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edificio"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_edificio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_entrada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_casa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/casa"
            android:textSize="15dp"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="20dp"/>
        <EditText
            android:id="@+id/edtext_casa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginHorizontal="20dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/btn_volver_generar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Volver"
                    android:textSize="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="100dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_continuar_generar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="2"
                    android:text="Continuar"
                    android:textSize="15dp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    </ScrollView>

</FrameLayout>