<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentInicio"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_titulo_censo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/censo"
            android:textAlignment="center"
            android:textSize="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:id="@+id/txt_iniciar_censo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_censo"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btn_generar_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Generar Código"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/txt_codigo_unico_vivienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo_unico_vivienda"
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ingresar"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />


    </LinearLayout>

</FrameLayout>